--- a/README.me
+++ b/README.me
@@ -1,1 +1,12 @@
 # cafe-infinite
+You can check out my progress here, probably: https://cafe-infinite.web.app/
+
+### Cafe Infinite
+Cafe Infinite is the working title I have for a project I've been thinking about for a long time. It's a simple platform I'd like to build to help connect people with their local businesses. With COVID, I don't see that being useful anytime soon, but hopefully I'll have it done by the time things return to normal, or to a new-normal.
+
+### FireBase
+I'm going to heavily rely on Google Firebase after being shown this tutorial: https://www.youtube.com/watch?v=9kRgVxULbag
+Which makes it look super easy. This is my first firebase project.
+
+### Google Maps
+I will be using the Google maps API, and possibly other google cloud APIs. We'll see.
